nexus-in.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
  - host: nexus.example.com
    http:
      paths:
        - path: /
          backend:
            serviceName: nexus-service
            servicePort: 8081
  - host: docker.example.com
    http:
      paths:
        - path: /
          backend:
            serviceName: nexus-service
            servicePort: 5000
